[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/game/platforms/Platform1.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/platforms/EndPlatform.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/game/levels/Map.gd" type="Script" id=3]

[node name="Map" type="Spatial"]
script = ExtResource( 3 )

[node name="End" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 40, 0 )

[node name="P1" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0 )

[node name="P2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 40, 0 )

[node name="P3" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 40, 0 )

[connection signal="follow_entered" from="End" to="." method="_on_End_follow_entered"]
[connection signal="player_entered" from="End" to="." method="_on_End_player_entered"]
